--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -25,7 +25,7 @@
   tasks:
     - name: print URL
       ansible.builtin.debug:
-    - vars:
-        URL: play.example.com
-        msg: URL - {{URL}}
+  vars:
+       URL: play.example.com
+       msg: URL - {{URL}}
 
