--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -23,7 +23,7 @@
 
 - name: remove existing content
   ansible.builtin.file:
-    path: /usr/share/nginx/html/
-    state: absent
+   path: /usr/share/nginx/html
+   state: absent
 
 
