--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -22,8 +22,10 @@
       ansible.builtin.shell: curl -s -L -o /tmp/frontend.zip "https://github.com/roboshop-devops-project/frontend/archive/main.zip"
 
 - name: remove existing content
-  ansible.builtin.file:
-   path: /usr/share/nginx/html
-   state: absent
+  hosts: localhost
+  tasks:
+    ansible.builtin.file:
+     path: /usr/share/nginx/html
+     state: absent
 
 
