--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -30,9 +30,12 @@
         state: absent
 
 - name: Unarchive a file that is already
-  ansible.builtin.unarchive:
-    src: https://github.com/Aleem410/frontend/archive/refs/heads/main.zip
-    dest: "/tmp"
+  hosts: localhost
+  tasks:
+    - name: unarchieve file
+      ansible.builtin.unarchive:
+        src: https://github.com/Aleem410/frontend/archive/refs/heads/main.zip
+        dest: "/tmp"
 
 
 
