--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -36,7 +36,7 @@
       ansible.builtin.unarchive:
         src: https://github.com/roboshop-devops-project/frontend/archive/main.zip
         dest: "/tmp"
-        remote_src: no
+        remote_src: yes
 
 
 
