--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -45,6 +45,7 @@
       ansible.builtin.copy:
        src: frontend-main/localhost.conf
        dest: /etc/nginx/default.d/roboshop.conf
+       remote_src: yes
 
 
 
