--- a/mongo/tasks/main.yml
+++ b/mongo/tasks/main.yml
@@ -2,9 +2,10 @@
   hosts: localhost
   tasks:
     - name: mongo repo
-  ansible.builtin.copy:
-    src: mongo.repo
+  ansible.builtin.get_url:
+    url: https://raw.githubusercontent.com/roboshop-devops-project/mongodb/main/mongo.repo
     dest: /etc/yum.repos.d/mongodb.repo
+
 
 - name: install mongodb
   hosts: localhost
