--- a/roles/mongo/tasks/main.yml
+++ b/roles/mongo/tasks/main.yml
@@ -7,6 +7,7 @@
   ansible.builtin.copy:
     src: mongo.repo
     dest: /etc/yum.repos.d/mongodb.repo
+    remote_src: yes
 
 - name: install mongodb
   ansible.builtin.yum:
