--- a/roles/mongo/tasks/main.yml
+++ b/roles/mongo/tasks/main.yml
@@ -5,7 +5,7 @@
 - name: download mongo repo
   hosts: localhost
   ansible.builtin.copy:
-    src: mongo/files/mongo.repo
+    src: mongo.txt
     dest: /etc/yum.repos.d/mongodb.repo
 
 
